Fix content overlapping by scrollbar on Windows OS

--- a/src/styles/base.scss
+++ b/src/styles/base.scss
@@ -67,7 +67,7 @@ button {
 body {
 	@include flex-column(stretch, flex-start);
 	margin: 0;
-	min-width: 100vw;
+	min-width: 100%;
 	min-height: 100vh;
 	overflow-x: hidden;
 
@@ -83,7 +83,7 @@ body {
 #root {
 	@include flex-column(stretch, flex-start);
 
-	min-width: 100vw;
+	min-width: 100%;
 	min-height: 100vh;
 
 	flex-grow: 1;
